@@ -1,5 +1,11 @@
 2009-02-26  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/protocol.c (lastfm_request_playlist)
+	(lastfm_request_custom_playlist): Set version to 1.5 when
+	requesting playlists.
+
+2009-02-26  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/playlist.h
 	* src/controller.c (controller_start_playing_cb)
 	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist):
